--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -58,10 +58,10 @@
   "ERROR_EMAIL_REQUIRED": "Email requerido",
   "RESERVATION_TAB": "RESERVAS",
   "RECB_RESERVATION": "Reservas Recibidas",
-  "SENT_RESERVATION": "Reservas Enviadas",
   "RES_FROM": "Reserva de",
   "RES_FOR": "Reserva con",
   "CANCEL?": "Quieres cancelar tu reserva con",
+  "DELETE?": "Quieres eliminar tu reserva con",
   "SAVE": "Guardar",
   "SAVEACT": "Guardar intereses",
   "activities": "Intereses",
@@ -119,15 +119,17 @@
   "name_host": "Nombre",
   "surname_host": "Apellidos",
   "message": "Mensaje",
-  "status_name": "Estatus",
+  "status_name": "Estado",
+  "You cancelled the reservation": "Has cancelado esta reserva. Otra vez será!",
   "You rejected the reservation": "Has rechazado esta reserva. Otra vez será!",
+  "She cancelled the reservation": "ha cancelado esta reserva. Otra vez será!",
   "Reservation Date": "Fecha de la visita",
   "Reservation": "Reserva",
   "REJECTED": "RECHAZADA",
   "PENDING": "PENDIENTE",
   "ACCEPTED": "ACEPTADA",
   "CANCELED": "CANCELADA",
-  "Reservation delete": "aún no ha contestado a tu petición. Estás a tiempo de cancelarla.",
+  "Reservation delete": "aún no ha contestado a tu petición. Puedes elimiarla si lo deseas.",
   "Reservation rejected text": "no ha podido aceptar tu reserva. Pero hay muchas más anfitrionas y destinos en la web!",
   "Reservation accepted": "Tu reserva ha sido aceptada! Aquí tienes sus datos de contacto:",
   "Headline in communities": "¿Dónde quieres ir?",
@@ -145,14 +147,24 @@
   "ALLCITIES": "Todas las ciudades",
   "SHOWPROFILE": "Ver perfil",
   "LABEL_INPUT_RESP":"Responde al mensaje de",
-  "CANCEL_RESP": "Explica los motivos de tu cancelación.",
+  "CANCEL_RESP": "Explica los motivos de tu cancelación",
   "CONTACTMSJ": "Escribe un mensaje a",
   "CITIESMAIL": "No encuentras tu ciudad? Contacta con nosotras en ciudades@shetravel.com",
   "RESERVATION": "Reservas",
   "read_host": "Leído",
   "reservation_start": "Fecha comienzo",
   "reservation_end": "Fecha fin",
-  "read_traveler": "Leído"
+  "FROM": "Del",
+  "TO": "hasta",
+  "read_traveler": "Leído",
+  "R_REQUEST": "Reservas leídas",
+  "U_REQUEST": "Reservas no leídas",
+
+  "SENT_R": "Reservas enviadas",
+  "RECEIVED_R": "Reservas recibidas",
+  "DELETE_B": "Eliminar Petición",
+  "CANCEL": "Cancelar petición"
+
 
   
 }
