correcciones y boton perfil

--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -131,8 +131,8 @@
   "Reservation rejected text": "couldn't accep your reservation this time... But there are many others hosts in our web!",
   "Reservation accepted": "Your host accepted your reservation. You can contact her now:",
   "Headline in communities": "Where do you wanna go?",
-  "Message from": "Message from",
-  "Message to": "Message to",
+  "Chat with": "Chat with",
+  
   "REGTEXT1": "Your journey starts here!",
   "REGTEXT2": "Fill out the registration form",
   "REGTEXT3": "and join the sheTravel Club",
@@ -157,7 +157,7 @@
   "RESERVATION": "Reservations",
   "CONTACTMSJ": "Contact",
   "read_host": "Seen",
-  "Reservation Date": "Fecha",
+  "Reservation Date": "Reservation Date",
   "reservation_start": "Date start",
   "reservation_end": "Date end",
   "FROM": "From",
