--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -133,8 +133,7 @@
   "Reservation rejected text": "no ha podido aceptar tu reserva. Pero hay muchas más anfitrionas y destinos en la web!",
   "Reservation accepted": "Tu reserva ha sido aceptada! Aquí tienes sus datos de contacto:",
   "Headline in communities": "¿Dónde quieres ir?",
-  "Message from": "Mensaje de",
-  "Message to": "Mensaje para",
+  "Chat with": "Chat con",
   "RESDATE": "Fecha de la visita",
   "RESMESSAGE": "Mensaje",
   "CHOOSEDESTINATIONMSSG": "Elige tu destino favorito",
