--- a/Front/src/assets/i18n/en.json
+++ b/Front/src/assets/i18n/en.json
@@ -8,6 +8,7 @@
   "LOGOUT": "Logout",
   "VIEW": "Views",
   "HOME": "Home",
+  "HOME-TITLE": "Your next adventure begins today",
   "LOGIN_TITLE": "Log in to your account",
   "ERROR_REQUIRED_FIELD": "Field is required",
   "ERROR_MIN_LENGTH_REQUIRED": "The value length entered must be at least 8 characters.",
