--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -8,6 +8,7 @@
   "LOGOUT": "Salir",
   "VIEW": "Vistas",
   "HOME": "Inicio",
+  "HOME-TITLE": "Tu próxima aventura empieza hoy",
   "LOGIN_TITLE": "Inicia sesión en tu cuenta",
   "ERROR_REQUIRED_FIELD": "El campo es requerido",
   "ERROR_MIN_LENGTH_REQUIRED": "El valor introducido tiene que tener una longitud mínima de 8 caracteres",
