placeholder descripcion anfitriona

--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -103,7 +103,7 @@
   "SNACKACTIVITIES": "Intereses guardados",
   "SNACKREGISTER": "Usuaria creada",
   "ONESENTENCE": "Definete en una frase. (máx. 100 caracteres)",
-  "LONGDESC": "Es tu momento. Cuéntale a las viajeras todo lo que te gusta. (máx. 500 caracteres)",
+  "LONGDESC": "Es tu momento. Cuéntale a las viajeras por qué elegirte como su anfitriona. (máx. 500 caracteres)",
   "DATE": "Fecha",
   "BACKBTN": "Volver",
   "EMAILCONT": "Email de contacto",
