--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -30,6 +30,7 @@
   "SURNAME": "Apellidos",
   "USER": "Usuaria",
   "PHONENUMBER": "Teléfono",
+  "PHONENUMBERCONT": "Teléfono de contacto",
   "DESCRIPTION": "Descripción",
   "PASSWORDCONFIRM": "Confirmación de contraseña",
   "HOST": "Anfitriona",
@@ -149,7 +150,7 @@
   "LABEL_INPUT_RESP":"Responde al mensaje de",
   "CANCEL_RESP": "Explica los motivos de tu cancelación",
   "CONTACTMSJ": "Escribe un mensaje a",
-  "CITIESMAIL": "No encuentras tu ciudad? Contacta con nosotras en ciudades@shetravel.com",
+  "CITIESMAIL": "¿No encuentras tu ciudad? Contacta con nosotras en info@shetravel.com",
   "RESERVATION": "Reservas",
   "read_host": "Leído",
   "reservation_start": "Fecha comienzo",
