--- a/Front/src/assets/i18n/es.json
+++ b/Front/src/assets/i18n/es.json
@@ -114,7 +114,7 @@
   "REJECT": "Rechazar",
   "REGTEXT1": "Tu viaje empieza aquí!",
   "REGTEXT2": "Rellena el formulario de registro",
-  "REGTEXT3": "y únete al club de sheTravel",
+  "REGTEXT3": "y únete al club sheTravel",
  
   "name_traveler": "Nombre",
   "surname_traveler": "Apellidos",
@@ -161,19 +161,25 @@
   "R_REQUEST": "Reservas leídas",
   "U_REQUEST": "Reservas no leídas",
 
-  "SENT_R": "Reservas enviadas",
+  "SENT_R": "Reservas",
+  "SENT_R1": "enviadas",
   "SENT_R2": "¿Quién te espera en su ciudad?",
 
-  "RECEIVED_R": "Reservas recibidas",
+  "RECEIVED_R": "Reservas",
+  "RECEIVED_R1": "recibidas",
   "RECEIVED_R2": "¿Quién viene a tu ciudad?",
   "DELETE_B": "Eliminar reserva",
-  "CANCEL": "Cancelar reserva",
+  "CANCEL": "Cancelar",
+  "CANCEL_R": "Cancelar reserva",
 
   "read_traveler": "Leído",
   "Date range": "Fecha de inicio y fin",
   "DATERANGE.APPLYLABEL": "Guardar",
   "SHORDESC": "Cuenta algo que te defina brevemente",
-  "MESSAGEMAX200CHA": "Escribe un mensaje de hasta 50 caracteres"
+  "MESSAGEMAX200CHA": "Escribe un mensaje de hasta 50 caracteres",
+
+  "WELLCOME":"Bienvenida a una forma diferente de viajar",
+  "WELLCOME1": "Únete hoy mismo a la comunidad sheTravel y vive experiencias de viaje únicas"
 
   
 }
